// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/marketplace/ > should render default 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-label="App Marketplace"
      aria-labelledby="genericModalLabel"
      aria-modal="true"
      class="fade in modal"
      id="marketplace-modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
          >
            <div
              class="modal-header"
            >
              <div
                class="GenericModal__header__text_container"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    class="modal-title"
                    id="genericModalLabel"
                  >
                    App Marketplace
                  </h1>
                </div>
                <div
                  class="Input_container marketplace-modal-search"
                >
                  <div
                    class="Input_fieldset Input_fieldset___legend"
                    data-testid="input-wrapper"
                  >
                    <div
                      class="Input_wrapper"
                    >
                      <svg
                        fill="currentColor"
                        height="24"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20.224,18.829l-3.775-3.775C17.418,13.791,18,12.215,18,10.5C18,6.358,14.642,3,10.5,3S3,6.358,3,10.5S6.358,18,10.5,18c1.708,0,3.278-0.578,4.539-1.539l3.775,3.749c0.39,0.388,1.02,0.388,1.41,0C20.592,19.823,20.592,19.216,20.224,18.829z M5,10.5
	C5,7.462,7.462,5,10.5,5S16,7.462,16,10.5S13.538,16,10.5,16S5,13.538,5,10.5z"
                        />
                      </svg>
                      <input
                        aria-label="Search marketplace"
                        class="Input form-control large search_input Input__focus"
                        id="searchMarketplaceTextbox"
                        name="searchMarketplaceTextbox"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="GenericModal__body"
              >
                <div
                  class="tabs"
                  id="marketplaceTabs"
                >
                  <ul
                    class="nav nav-tabs"
                    role="tablist"
                  >
                    <li
                      class="active"
                      role="presentation"
                    >
                      <a
                        aria-controls="marketplaceTabs-pane-all"
                        aria-selected="true"
                        href="#"
                        id="marketplaceTabs-tab-all"
                        role="tab"
                      >
                        All
                      </a>
                    </li>
                    <li
                      class=""
                      role="presentation"
                    >
                      <a
                        aria-controls="marketplaceTabs-pane-installed"
                        aria-selected="false"
                        href="#"
                        id="marketplaceTabs-tab-installed"
                        role="tab"
                        tabindex="-1"
                      >
                        Installed (0)
                      </a>
                    </li>
                  </ul>
                  <div
                    class="tab-content"
                  >
                    <div
                      aria-hidden="false"
                      aria-labelledby="marketplaceTabs-tab-all"
                      class="fade tab-pane active in"
                      id="marketplaceTabs-pane-all"
                      role="tabpanel"
                    >
                      <div
                        class="no_plugins"
                      >
                        <span
                          class="icon__plugin"
                        >
                          <svg
                            aria-label="Plugin Icon"
                            height="61px"
                            viewBox="0 0 61 61"
                            width="61px"
                          >
                            <g
                              fill="inherit"
                              fill-rule="evenodd"
                              stroke="none"
                              stroke-width="1"
                            >
                              <g
                                fill="inherit"
                                transform="translate(-347.000000, -211.000000)"
                              >
                                <g
                                  transform="translate(377.585786, 241.500000) rotate(-315.000000) translate(-377.585786, -241.500000) translate(358.585786, 200.000000)"
                                >
                                  <g
                                    transform="translate(0.000000, -0.000000)"
                                  >
                                    <path
                                      d="M3.28846154,6.10822511 L3.05411255,6.10822511 C1.36737277,6.10822511 2.06566048e-16,4.74085234 0,3.05411255 C-2.06566048e-16,1.36737277 1.36737277,-7.78498519e-14 3.05411255,-7.81597009e-14 L34.9458874,-7.81597009e-14 C36.6326272,-8.16905472e-14 38,1.36737277 38,3.05411255 C38,4.74085234 36.6326272,6.10822511 34.9458874,6.10822511 L34.7115385,6.10822511 L34.7115385,14.7316017 C34.7115385,20.9798931 29.0184395,26.1638765 21.5576923,27.1415606 L21.5576923,33.1964286 C21.5576923,34.5081049 20.4943686,35.5714286 19.1826923,35.5714286 C17.871016,35.5714286 16.8076923,34.5081049 16.8076923,33.1964286 L16.8076923,27.1859094 C9.16823824,26.3322077 3.28846154,21.0815081 3.28846154,14.7316017 L3.28846154,6.10822511 Z M19.1431901,14.7316017 C17.8533303,14.7316017 16.8076923,15.7772397 16.8076923,17.0670996 C16.8076923,18.3569594 17.8533303,19.4025974 19.1431901,19.4025974 L19.2221945,19.4025974 C20.5120543,19.4025974 21.5576923,18.3569594 21.5576923,17.0670996 C21.5576923,15.7772397 20.5120543,14.7316017 19.2221945,14.7316017 L19.1431901,14.7316017 Z"
                                      transform="translate(19.000000, 17.785714) rotate(-180.000000) translate(-19.000000, -17.785714) "
                                    />
                                    <path
                                      d="M32.1538462,53.5367965 L34.7115385,53.5367965 L34.7115385,62.1601732 C34.7115385,68.4084646 29.0184395,73.592448 21.5576923,74.5701321 L21.5576923,80.625 C21.5576923,81.9366763 20.4943686,83 19.1826923,83 C17.871016,83 16.8076923,81.9366763 16.8076923,80.625 L16.8076923,74.6144809 C9.16823824,73.7607791 3.28846154,68.5100796 3.28846154,62.1601732 L3.28846154,53.5367965 L3.05411255,53.5367965 C1.36737277,53.5367965 2.06566048e-16,52.1694238 0,50.482684 C-2.06566048e-16,48.7959442 1.36737277,47.4285714 3.05411255,47.4285714 L8.40384615,47.4285714 L8.40384615,42.2581169 C8.40384615,40.9464406 9.46716987,39.8831169 10.7788462,39.8831169 C12.0905224,39.8831169 13.1538462,40.9464406 13.1538462,42.2581169 L13.1538462,47.4285714 L24.8461538,47.4285714 L24.8461538,42.2581169 C24.8461538,40.9464406 25.9094776,39.8831169 27.2211538,39.8831169 C28.5328301,39.8831169 29.5961538,40.9464406 29.5961538,42.2581169 L29.5961538,47.4285714 L34.9458874,47.4285714 C36.6326272,47.4285714 38,48.7959442 38,50.482684 C38,52.1694238 36.6326272,53.5367965 34.9458874,53.5367965 L32.1538462,53.5367965 Z M19.1431901,62.1601732 C17.8533303,62.1601732 16.8076923,63.2058112 16.8076923,64.495671 C16.8076923,65.7855308 17.8533303,66.8311688 19.1431901,66.8311688 L19.2221945,66.8311688 C20.5120543,66.8311688 21.5576923,65.7855308 21.5576923,64.495671 C21.5576923,63.2058112 20.5120543,62.1601732 19.2221945,62.1601732 L19.1431901,62.1601732 Z"
                                      transform="translate(19.000000, 61.441558) rotate(-360.000000) translate(-19.000000, -61.441558) "
                                    />
                                  </g>
                                </g>
                              </g>
                            </g>
                          </svg>
                        </span>
                        <div
                          class="no_plugins__message"
                        >
                          No plugins found
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="divider modal-footer"
            >
              <div
                class="footer-pagination"
              >
                <div
                  class="footer-pagination__legend"
                />
                <div
                  class="footer-pagination__button-container"
                >
                  <button
                    class="footer-pagination__button-container__button disabled"
                    disabled=""
                    type="button"
                  >
                    <svg
                      fill="currentColor"
                      height="16"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                      />
                    </svg>
                    <span>
                      Previous
                    </span>
                  </button>
                  <button
                    class="footer-pagination__button-container__button disabled"
                    disabled=""
                    type="button"
                  >
                    <span>
                      Next
                    </span>
                    <svg
                      fill="currentColor"
                      height="16"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/marketplace/ > should render with plugins installed 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-label="App Marketplace"
      aria-labelledby="genericModalLabel"
      aria-modal="true"
      class="fade in modal"
      id="marketplace-modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign marketplace-modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
          >
            <div
              class="modal-header"
            >
              <div
                class="GenericModal__header__text_container"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    class="modal-title"
                    id="genericModalLabel"
                  >
                    App Marketplace
                  </h1>
                </div>
                <div
                  class="Input_container marketplace-modal-search"
                >
                  <div
                    class="Input_fieldset Input_fieldset___legend"
                    data-testid="input-wrapper"
                  >
                    <div
                      class="Input_wrapper"
                    >
                      <svg
                        fill="currentColor"
                        height="24"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20.224,18.829l-3.775-3.775C17.418,13.791,18,12.215,18,10.5C18,6.358,14.642,3,10.5,3S3,6.358,3,10.5S6.358,18,10.5,18c1.708,0,3.278-0.578,4.539-1.539l3.775,3.749c0.39,0.388,1.02,0.388,1.41,0C20.592,19.823,20.592,19.216,20.224,18.829z M5,10.5
	C5,7.462,7.462,5,10.5,5S16,7.462,16,10.5S13.538,16,10.5,16S5,13.538,5,10.5z"
                        />
                      </svg>
                      <input
                        aria-label="Search marketplace"
                        class="Input form-control large search_input Input__focus"
                        id="searchMarketplaceTextbox"
                        name="searchMarketplaceTextbox"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="GenericModal__body"
              >
                <div
                  class="tabs"
                  id="marketplaceTabs"
                >
                  <ul
                    class="nav nav-tabs"
                    role="tablist"
                  >
                    <li
                      class="active"
                      role="presentation"
                    >
                      <a
                        aria-controls="marketplaceTabs-pane-all"
                        aria-selected="true"
                        href="#"
                        id="marketplaceTabs-tab-all"
                        role="tab"
                      >
                        All
                      </a>
                    </li>
                    <li
                      class=""
                      role="presentation"
                    >
                      <a
                        aria-controls="marketplaceTabs-pane-installed"
                        aria-selected="false"
                        href="#"
                        id="marketplaceTabs-tab-installed"
                        role="tab"
                        tabindex="-1"
                      >
                        Installed (1)
                      </a>
                    </li>
                  </ul>
                  <div
                    class="tab-content"
                  >
                    <div
                      aria-hidden="false"
                      aria-labelledby="marketplaceTabs-tab-all"
                      class="fade tab-pane active in"
                      id="marketplaceTabs-pane-all"
                      role="tabpanel"
                    >
                      <div
                        class="more-modal__list"
                      >
                        <div
                          class="more-modal__row more-modal__row--link"
                          id="marketplace-plugin-com.mattermost.test"
                        >
                          <span
                            class="icon__plugin icon__plugin--background"
                          >
                            <svg
                              aria-label="Plugin Icon"
                              height="61px"
                              viewBox="0 0 61 61"
                              width="61px"
                            >
                              <g
                                fill="inherit"
                                fill-rule="evenodd"
                                stroke="none"
                                stroke-width="1"
                              >
                                <g
                                  fill="inherit"
                                  transform="translate(-347.000000, -211.000000)"
                                >
                                  <g
                                    transform="translate(377.585786, 241.500000) rotate(-315.000000) translate(-377.585786, -241.500000) translate(358.585786, 200.000000)"
                                  >
                                    <g
                                      transform="translate(0.000000, -0.000000)"
                                    >
                                      <path
                                        d="M3.28846154,6.10822511 L3.05411255,6.10822511 C1.36737277,6.10822511 2.06566048e-16,4.74085234 0,3.05411255 C-2.06566048e-16,1.36737277 1.36737277,-7.78498519e-14 3.05411255,-7.81597009e-14 L34.9458874,-7.81597009e-14 C36.6326272,-8.16905472e-14 38,1.36737277 38,3.05411255 C38,4.74085234 36.6326272,6.10822511 34.9458874,6.10822511 L34.7115385,6.10822511 L34.7115385,14.7316017 C34.7115385,20.9798931 29.0184395,26.1638765 21.5576923,27.1415606 L21.5576923,33.1964286 C21.5576923,34.5081049 20.4943686,35.5714286 19.1826923,35.5714286 C17.871016,35.5714286 16.8076923,34.5081049 16.8076923,33.1964286 L16.8076923,27.1859094 C9.16823824,26.3322077 3.28846154,21.0815081 3.28846154,14.7316017 L3.28846154,6.10822511 Z M19.1431901,14.7316017 C17.8533303,14.7316017 16.8076923,15.7772397 16.8076923,17.0670996 C16.8076923,18.3569594 17.8533303,19.4025974 19.1431901,19.4025974 L19.2221945,19.4025974 C20.5120543,19.4025974 21.5576923,18.3569594 21.5576923,17.0670996 C21.5576923,15.7772397 20.5120543,14.7316017 19.2221945,14.7316017 L19.1431901,14.7316017 Z"
                                        transform="translate(19.000000, 17.785714) rotate(-180.000000) translate(-19.000000, -17.785714) "
                                      />
                                      <path
                                        d="M32.1538462,53.5367965 L34.7115385,53.5367965 L34.7115385,62.1601732 C34.7115385,68.4084646 29.0184395,73.592448 21.5576923,74.5701321 L21.5576923,80.625 C21.5576923,81.9366763 20.4943686,83 19.1826923,83 C17.871016,83 16.8076923,81.9366763 16.8076923,80.625 L16.8076923,74.6144809 C9.16823824,73.7607791 3.28846154,68.5100796 3.28846154,62.1601732 L3.28846154,53.5367965 L3.05411255,53.5367965 C1.36737277,53.5367965 2.06566048e-16,52.1694238 0,50.482684 C-2.06566048e-16,48.7959442 1.36737277,47.4285714 3.05411255,47.4285714 L8.40384615,47.4285714 L8.40384615,42.2581169 C8.40384615,40.9464406 9.46716987,39.8831169 10.7788462,39.8831169 C12.0905224,39.8831169 13.1538462,40.9464406 13.1538462,42.2581169 L13.1538462,47.4285714 L24.8461538,47.4285714 L24.8461538,42.2581169 C24.8461538,40.9464406 25.9094776,39.8831169 27.2211538,39.8831169 C28.5328301,39.8831169 29.5961538,40.9464406 29.5961538,42.2581169 L29.5961538,47.4285714 L34.9458874,47.4285714 C36.6326272,47.4285714 38,48.7959442 38,50.482684 C38,52.1694238 36.6326272,53.5367965 34.9458874,53.5367965 L32.1538462,53.5367965 Z M19.1431901,62.1601732 C17.8533303,62.1601732 16.8076923,63.2058112 16.8076923,64.495671 C16.8076923,65.7855308 17.8533303,66.8311688 19.1431901,66.8311688 L19.2221945,66.8311688 C20.5120543,66.8311688 21.5576923,65.7855308 21.5576923,64.495671 C21.5576923,63.2058112 20.5120543,62.1601732 19.2221945,62.1601732 L19.1431901,62.1601732 Z"
                                        transform="translate(19.000000, 61.441558) rotate(-360.000000) translate(-19.000000, -61.441558) "
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </svg>
                          </span>
                          <div
                            class="more-modal__details"
                          >
                            <a
                              aria-label="test"
                              class="style--none more-modal__row--link"
                              href="https://github.com/mattermost/mattermost-test"
                              location="marketplace_item"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              Test
                              <span
                                class="light subtitle"
                              >
                                (1.0.3)
                              </span>
                            </a>
                            <a
                              aria-label="Plugin's website"
                              class="style--none more-modal__row--link"
                              href="https://github.com/mattermost/mattermost-test"
                              location="marketplace_item"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              <p
                                class="more-modal__description"
                              >
                                This plugin is to test
                              </p>
                            </a>
                          </div>
                          <div
                            class="more-modal__actions"
                          >
                            <a
                              href="/admin_console/plugins/plugin_com.mattermost.test"
                            >
                              <button
                                class="plugin-configure"
                              >
                                Configure
                              </button>
                            </a>
                          </div>
                        </div>
                        <div
                          class="more-modal__row more-modal__row--link"
                          id="marketplace-plugin-com.mattermost.nps"
                        >
                          <span
                            class="icon__plugin icon__plugin--background"
                          >
                            <svg
                              aria-label="Plugin Icon"
                              height="61px"
                              viewBox="0 0 61 61"
                              width="61px"
                            >
                              <g
                                fill="inherit"
                                fill-rule="evenodd"
                                stroke="none"
                                stroke-width="1"
                              >
                                <g
                                  fill="inherit"
                                  transform="translate(-347.000000, -211.000000)"
                                >
                                  <g
                                    transform="translate(377.585786, 241.500000) rotate(-315.000000) translate(-377.585786, -241.500000) translate(358.585786, 200.000000)"
                                  >
                                    <g
                                      transform="translate(0.000000, -0.000000)"
                                    >
                                      <path
                                        d="M3.28846154,6.10822511 L3.05411255,6.10822511 C1.36737277,6.10822511 2.06566048e-16,4.74085234 0,3.05411255 C-2.06566048e-16,1.36737277 1.36737277,-7.78498519e-14 3.05411255,-7.81597009e-14 L34.9458874,-7.81597009e-14 C36.6326272,-8.16905472e-14 38,1.36737277 38,3.05411255 C38,4.74085234 36.6326272,6.10822511 34.9458874,6.10822511 L34.7115385,6.10822511 L34.7115385,14.7316017 C34.7115385,20.9798931 29.0184395,26.1638765 21.5576923,27.1415606 L21.5576923,33.1964286 C21.5576923,34.5081049 20.4943686,35.5714286 19.1826923,35.5714286 C17.871016,35.5714286 16.8076923,34.5081049 16.8076923,33.1964286 L16.8076923,27.1859094 C9.16823824,26.3322077 3.28846154,21.0815081 3.28846154,14.7316017 L3.28846154,6.10822511 Z M19.1431901,14.7316017 C17.8533303,14.7316017 16.8076923,15.7772397 16.8076923,17.0670996 C16.8076923,18.3569594 17.8533303,19.4025974 19.1431901,19.4025974 L19.2221945,19.4025974 C20.5120543,19.4025974 21.5576923,18.3569594 21.5576923,17.0670996 C21.5576923,15.7772397 20.5120543,14.7316017 19.2221945,14.7316017 L19.1431901,14.7316017 Z"
                                        transform="translate(19.000000, 17.785714) rotate(-180.000000) translate(-19.000000, -17.785714) "
                                      />
                                      <path
                                        d="M32.1538462,53.5367965 L34.7115385,53.5367965 L34.7115385,62.1601732 C34.7115385,68.4084646 29.0184395,73.592448 21.5576923,74.5701321 L21.5576923,80.625 C21.5576923,81.9366763 20.4943686,83 19.1826923,83 C17.871016,83 16.8076923,81.9366763 16.8076923,80.625 L16.8076923,74.6144809 C9.16823824,73.7607791 3.28846154,68.5100796 3.28846154,62.1601732 L3.28846154,53.5367965 L3.05411255,53.5367965 C1.36737277,53.5367965 2.06566048e-16,52.1694238 0,50.482684 C-2.06566048e-16,48.7959442 1.36737277,47.4285714 3.05411255,47.4285714 L8.40384615,47.4285714 L8.40384615,42.2581169 C8.40384615,40.9464406 9.46716987,39.8831169 10.7788462,39.8831169 C12.0905224,39.8831169 13.1538462,40.9464406 13.1538462,42.2581169 L13.1538462,47.4285714 L24.8461538,47.4285714 L24.8461538,42.2581169 C24.8461538,40.9464406 25.9094776,39.8831169 27.2211538,39.8831169 C28.5328301,39.8831169 29.5961538,40.9464406 29.5961538,42.2581169 L29.5961538,47.4285714 L34.9458874,47.4285714 C36.6326272,47.4285714 38,48.7959442 38,50.482684 C38,52.1694238 36.6326272,53.5367965 34.9458874,53.5367965 L32.1538462,53.5367965 Z M19.1431901,62.1601732 C17.8533303,62.1601732 16.8076923,63.2058112 16.8076923,64.495671 C16.8076923,65.7855308 17.8533303,66.8311688 19.1431901,66.8311688 L19.2221945,66.8311688 C20.5120543,66.8311688 21.5576923,65.7855308 21.5576923,64.495671 C21.5576923,63.2058112 20.5120543,62.1601732 19.2221945,62.1601732 L19.1431901,62.1601732 Z"
                                        transform="translate(19.000000, 61.441558) rotate(-360.000000) translate(-19.000000, -61.441558) "
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </svg>
                          </span>
                          <div
                            class="more-modal__details"
                          >
                            <a
                              aria-label="user satisfaction surveys"
                              class="style--none more-modal__row--link"
                              href="https://github.com/mattermost/mattermost-plugin-nps"
                              location="marketplace_item"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              User Satisfaction Surveys
                              <span
                                class="light subtitle"
                              >
                                (1.0.3)
                              </span>
                            </a>
                            <a
                              aria-label="Plugin's website"
                              class="style--none more-modal__row--link"
                              href="https://github.com/mattermost/mattermost-plugin-nps"
                              location="marketplace_item"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              <p
                                class="more-modal__description"
                              >
                                This plugin sends quarterly user satisfaction surveys to gather feedback and help improve Mattermost
                              </p>
                            </a>
                          </div>
                          <div
                            class="more-modal__actions"
                          >
                            <button
                              class="plugin-install always-show-enabled"
                            >
                              Install
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="divider modal-footer"
            >
              <div
                class="footer-pagination"
              >
                <div
                  class="footer-pagination__legend"
                >
                  Showing 1-2 of 2
                </div>
                <div
                  class="footer-pagination__button-container"
                >
                  <button
                    class="footer-pagination__button-container__button disabled"
                    disabled=""
                    type="button"
                  >
                    <svg
                      fill="currentColor"
                      height="16"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                      />
                    </svg>
                    <span>
                      Previous
                    </span>
                  </button>
                  <button
                    class="footer-pagination__button-container__button disabled"
                    disabled=""
                    type="button"
                  >
                    <span>
                      Next
                    </span>
                    <svg
                      fill="currentColor"
                      height="16"
                      version="1.1"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
